          with N the number of matches to be played consecutively
        - MATCHES_LEFT <N>
- DEADLY_EXPLOSIONS setting. When enabled, cycles in the blast radius of an
  explosion will be destroyed, and DEATH_EXPLOSION will be written to ladderlog.
  Scoring can be applied with the SCORE_EXPLOSION and SCORE_EXPLOSION_OWNER
  settings.
- New helper program armagetronad-serverquery. Fetches the master list and
  advanced server information, and outputs it in a JSON format. Only available
  in dedicated server builds.
- Tutorials and Challenges
- Resource corruption can be detected in some cases and triggers a redownload.
- New camera settings: CAMERA_FREE_START_PITCH/ROTATE adjust direction of free camera
- New camera commands: WARP_CAMERA warps one camera to a specified setup,
  SAVE_CAMERAS prints the commands to restore the current configuration.
- Upper sky can now be loaded from moviepack/upper_sky.png resp. textures/upper_sky.png;
  if they do not exist, the floor is used, as previously. New settings
  UPPER_SKY_RED, _GREEN, _BLUE, _SCALE and _HEIGHT as well as LOWER_SKY_HEIGHT
  control the look.
- Conforming partly to FreeDesktop standards on Unix
  (http://standards.freedesktop.org/basedir-spec/basedir-spec-latest.html) :
  UserDataDir defaults to $XDG_DATA_HOME/.armagetronad,
  VarDir to $XDG_DATA_HOME/.armagetronad/var and
  UserConfigDir to $XDG_CONFIG_HOME/.armagetronad.
- user*.cfg now resides in UserConfigDir.
- Configuration files, with the exception of legacy user*.cfg files, are no longer
  read from the var directory.
- Added support for streaming tArrays, lists and vectors to tStrings, producing text
  looking a bit like this entry.
- There is now only one score message per zone conquest instead of one per conquerer.
- Instant chat options have been merged into one menu.
- The OS X dedicated server can now be run by opening the executable in the Finder.
- The OS X builds are now created using automake.

Changes since 0.3.0
===================
