@@ -61,6 +61,9 @@ message PlayerNetIDSync
     optional bool   legacy_sync_end = 20001;
 
     optional bool   ready           = 20;
+
+    optional bool   invitations_changed = 21;
+    repeated uint32 invitation_team_ids = 22 [packed=true];
 }
 
 // net object control message
